knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Team_Member__c/pqcrush__Team_Member__c.object-meta.xml
<CustomObject>
    <label>Team Member</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Account Plan Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>