knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Team_Member__c/fields/pqcrush__Role__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>Read Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>