knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Team_Member__c/validationRules/pqcrush__OwnerValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>pqcrush__OwnerValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISPICKVAL(pqcrush__Role__c, &apos;Edit&apos;), pqcrush__User__c ==  pqcrush__Account_Plan__r.OwnerId)</errorConditionFormula>
    <errorDisplayField>pqcrush__Role__c</errorDisplayField>
    <errorMessage>The owner must be an editor</errorMessage>
</ValidationRule>