knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Team_Member__c/validationRules/pqcrush__User_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>pqcrush__User_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( pqcrush__User__c )</errorConditionFormula>
    <errorDisplayField>pqcrush__User__c</errorDisplayField>
    <errorMessage>User is required</errorMessage>
</ValidationRule>