knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Team_Member__c/listViews/pqcrush__All.listView-meta.xml
<ListView>
    <fullName>pqcrush__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>